Fix Various Bugs that occurred during frontend integration (#68)
* fix SecurityConfig for cors

* Implement ControllerLoggingAspect

* Fix RankingResponseDto

* Fix docker-compose

* Add Server Address in swagger

* Fix exception logics in JwtFillter

* Fix jwt expired seconds

* fix testcode